@@ -1,3 +1,8 @@
+ ezstream - source client for Icecast with external en-/decoder support
+ Copyright (C) 2003, 2004, 2005, 2006  Ed Zaleski <oddsock@oddsock.org>
+ Copyright (C) 2007                    Moritz Grimm <gtgbr@gmx.net>
+
+
 		    GNU GENERAL PUBLIC LICENSE
 		       Version 2, June 1991
 
